fix: align items in center of container

--- a/css/base.css
+++ b/css/base.css
@@ -263,6 +263,7 @@ a {
   font-family: "Russo One", sans-serif;
   color: var(--hero-chatbox-text);
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
